bold in math and small improvements in tex

--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -63,9 +63,9 @@
 %--------------------------------------------------------------------%
 % ABSTRACT
 \begin{abstract}
-In this thesis, we study the cryptanalysis of round reduced variants of \KECCAK{} hash function. \KECCAK{} faced lot of cryptanalysis by various cryptographers from the beginning after it was declared as the winner of the \SHA-3 contest. Various techniques are used to break reduced-rounds of \KECCAK{} like computing partial solutions for slices,  linearization techniques such as linear structures for 2, 3 rounds of round-reduced \KECCAK{}. These techniques are generally used for preimage attacks. For collision attacks cryptographers started with low weight differential trails and attacked small number of rounds efficiently. Later on they provided round extensions to break further rounds, like one-round connector, two-round connector comprising of one round backward connector and one round forward connector.
+In this thesis, we study the cryptanalysis of round reduced variants of \KECCAK{} hash function. \KECCAK{} faced lot of cryptanalysis by various cryptographers from the beginning after it was declared as the winner of the \SHA-3 contest. Various techniques are used to attack the reduced-rounds of \KECCAK{} like computing partial solutions for slices,  linearization techniques such as linear structures for 2, 3 rounds of round-reduced \KECCAK{}. These techniques are generally used for preimage attacks. For collision attacks cryptographers started with low weight differential trails and attacked small number of rounds efficiently. Later on they provided round extensions to break further rounds, like one-round connector, two-round connector comprising of one round backward connector and one round forward connector.
 
-We present a cryptanalysis of round reduced \KECCAK-$384$ for $2$ rounds. The best known preimage attack for this variant of \KECCAK{} has the time complexity $2^{129}$. Based on the work done by Naya Plasencia \etal~\cite{naya2011practical} in our analysis, we find a preimage in the time complexity of $2^{89}$ and the same memory is required by adopting similar technique. We further try to adopt the linear structure technique provided by Guo \etal~\cite{guo2016linear} to give better preimage attacks for round-reduced versions of \KECCAK{} and we only succeed by improving the preimage attack complexity for 3 rounds of \KECCAK-$256$ by $2^{14}$.
+In this thesis we present a cryptanalysis of round reduced \KECCAK-$384$ for $2$ rounds. The best known preimage attack for this variant of \KECCAK{} has the time complexity $2^{129}$. Based on the work done by Naya Plasencia \etal~\cite{naya2011practical} in our analysis, we find a preimage in the time complexity of $2^{89}$ and the same memory is required by adopting similar technique. We further try to adopt the linear structure technique provided by Guo \etal~\cite{guo2016linear} to give better preimage attacks for round-reduced versions of \KECCAK{} and we only succeed by improving the preimage attack complexity for 3 rounds of \KECCAK-$256$ by $2^{14}$.
 \end{abstract}
 
 %--------------------------------------------------------------------%
@@ -78,7 +78,7 @@ To my family
 % Acknowledgements
 \begin{acknowledgments}
 
-I would like to thank all the people who helped me during my thesis. I also thank my thesis advisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying. I also thank the reviewers of Indocrypt-$2018$ for providing comments which helped in improving the work. In particular, we thank an anonymous reviewer for suggesting us to implement the attack on the $\Keccak[r:=400-192,\, c:=192]$ and also providing insights to further improve the attack. I would also like to thank Rajendra Kumar and Mahesh Sreekumar Rajasree for their valuable time, discussions, and guiding me in every possible way. I thank CSE, IITK department teachers for all the teachings and valuable efforts, I have learnt a lot from here because of your efforts. I also thank IITK for my academic as well as personal growth.
+I would like to thank all the people who helped me during my thesis. I also thank my thesis advisor \textbf{Dr. Shashank Singh} for his guidance and motivating me to keep trying. I also thank the reviewers of Indocrypt-$2018$ for providing comments which helped in improving the work. In particular, we thank an anonymous reviewer for suggesting us to implement the attack on the $\Keccak[r:=400-192,\, c:=192]$ and also providing insights to further improve the attack. I would also like to thank Rajendra Kumar and Mahesh Sreekumar Rajasree for their valuable time, discussions, and guiding me in every possible way. I thank CSE, IITK department teachers for all the teachings and valuable efforts, I have learnt a lot from here because of your efforts. A special thanks to the CSE department for providing all the facilities that were required. I also thank IITK for my academic as well as personal growth.
 \end{acknowledgments}
 
 %--------------------------------------------------------------------%
