--- a/latex/Thesis/related.tex
+++ b/latex/Thesis/related.tex
@@ -329,7 +329,7 @@ In the long term, we hope the community will find this work useful and this will
 
 \chapter{Preimage Attacks on 3,4 rounds of \KECCAK{}}
 
-\section{Preimage Attack on 3-round \Keccak-$256$}
+\section{Preimage Attack on 3-round \Keccak-\mathbf{256}}
 In this section we discuss a preimage attack for 3 rounds of \KECCAK-$256$. This attack draws motivation from preimage attack on 2 round \Keccak-$256$ using the idea of linear structure as explained in section~\ref{section2RKeccak256}. 
 
 \begin{figure}
@@ -379,7 +379,7 @@ Attack complexity $ = 2^{256 - 78} = 2^{178}$.
 
 This method observes an improvement of $2^{14}$ compared to the attack mentioned in \cite{guo2016linear}.
 
-\section{Preimage attack on 4-round \KECCAK-$224$}
+\section{Preimage attack on 4-round \KECCAK-\mathbf{224}}
     
     \textbf{Note : } The results under this section are not verified. [TODO]
     
