changed section of attack for Keccak to Keccak[800-384,384] and other changes

--- a/latex/Thesis/applications.tex
+++ b/latex/Thesis/applications.tex
@@ -1,6 +1,6 @@
 \chapter{Attacks on \KECCAK{}}
 
-\KECCAK{} observed intense cryptanalysis since its inception, this involved various types of attacks with different techniques. The following are the basic types of attacks which are applicable to a cryptographic hash function :
+In this chapter we study various attacks on \KECCAK{}.The following are the basic types of attacks which are applicable to a cryptographic hash function:
 
 \begin{enumerate}
 	\item \textbf{Preimage Attacks}
@@ -11,11 +11,11 @@ Now, we will discuss these types of attack in detail.
 
 \section{Preimage Attacks on Round Reduced Keccak}
 
-In a Preimage attack, the attacker is able to derive message from the digest of the hash function. For a n-bit hash value in general it takes $2^{n}$ computations to compute the message but this a brute-force attack. These kind of attacks are avoided by designers of hash function by setting the size of digest accordingly. Any complexity above or around $2^{80}$ is considered computationally hard to achieve. The makers of \KECCAK{} have released various variants of the hash function \SHA-3 with different sizes of output hash. The 4 \SHA-3 functions are \SHA3-224, \SHA3-256, \SHA3-384 and \SHA3-512, with these lengths of hash value it's a hard problem to get a preimage. Cryptographers around the globe are working on breaking the reduced round versions of \KECCAK{} by providing practical preimage attacks for these four \SHA-3 hash functions. Till date there are practical preimage attacks only for $3$ rounds of \KECCAK-$224$, $2$ rounds of \KECCAK-$256$ and $1$ round of \KECCAK-$384$, \KECCAK-$512$. There are still no practical preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$. These preimage attacks provided by various cryptographers involve cryptanalysis of the underlying transformations per round and try to control there behaviour in some way and get the values of message variables.
+In a Preimage attack, the attacker is able to derive message from the digest of the hash function. For a n-bit hash value in general it takes $O(2^{n})$ computations to compute the message but this a brute-force attack. These kind of attacks are avoided by designers of hash function by setting the size of digest accordingly. An attack with complexity greater than or equal to $O(2^{80})$ is considered computationally hard to achieve. The makers of \KECCAK{} have released various variants of the hash function \SHA-3 with different sizes of output hash. The 4 \SHA-3 functions are \SHA3-224, \SHA3-256, \SHA3-384 and \SHA3-512, with these lengths of hash value it's a hard to compute a preimage. Cryptographers across the globe are working on breaking the reduced round versions of \KECCAK{} by providing practical preimage attacks for these four \SHA-3 hash functions. Till date there are practical preimage attacks only for $3$ rounds of \KECCAK-$224$, $2$ rounds of \KECCAK-$256$ and $1$ round of \KECCAK-$384$, \KECCAK-$512$. There are still no practical preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$. These preimage attacks provided by various cryptographers involve cryptanalysis of the underlying transformations per round and try to control there behaviour in some way and get the values of message variables.
 
-There are some improved preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$ proposed by Guo \etal in ~\cite{guo2016linear} which have complexities better than brute-force attacks but are still not practical. Similarly there are many theoretical attacks on four \SHA-3 functions for different number of rounds which are better than brute-force. Improving and achieving practical preimage attacks for reduced round variants of \KECCAK{} is an active area of research. Further we discuss some preimage attacks proposed by cryptographers.
+There are some improved preimage attacks for $2$ rounds of \KECCAK-$384$, \KECCAK-$512$ proposed by Guo \etal in ~\cite{guo2016linear} which have complexities better than brute-force attacks but are still not practical. Similarly there are many theoretical attacks on four \SHA-3 functions for different number of rounds which are better than brute-force. Improving and achieving practical preimage attacks for reduced round variants of \KECCAK{} is an active area of research and in this thesis, we address the same.
 
-In \cite{guo2016linear} Guo \etal describe there techniques for preimage attacks where they use linear structures to linearize variables up to 3 rounds. Linear structure is a Keccak state where we have a certain number of free linear variables, these free variables provide us with degrees of freedom which help in improving over brute-force attacks. These free variables form the linear structure. So, the more number of free variables the better complexity of attack we can achieve provided the system of equations remains linear.
+In \cite{guo2016linear}, Guo \etal describe there techniques for preimage attacks where they use linear structures to linearize variables up to 3 rounds. The Linear structures are the states of \KECCAK{} state which have a certain number of free linear variables, these free variables provide us with degrees of freedom which help in improving over brute-force attacks. These free variables form the linear structure. So, the more number of free variables the better complexity of attack we can achieve provided the system of equations remains linear.
 
 In this type of attack, we set message variables in the rate part in such a way that the state remains a linear structure for the number of required rounds. Here, we go forwards with the message variables for (number of rounds - 1) + half round, considering the state is linear structure and rest of round we go backwards from the hash, and then build a system of linear equations and solve it to get the values of message variables. So, after a message is found from the hash we get the preimage successfully. This is a meet in the middle approach of attacking the system.
 
@@ -124,7 +124,7 @@ In this section we will discuss some of the existing Preimage attacks on 3 round
 
     The idea for improvements of these attacks is an extension for the method described in previous section. As the variable bit $C[x][y][z]$ is linearized by guessing 10 bits. They assumed there that the guessing was independent, which can be dependent too if chosen properly. So the idea is to guess for those bits which would help in reducing the number of guesses for some other bit(s). So it will be possible to reduce the complexity further by choosing linearly dependent bits, so that there can be more matched bits of the hash value.
 
-		We start with following two equations, $B$ represents the state after $\Chi$ as shown in the flow diagram for 3 rounds.
+		We start with following two equations, $B$ represents the state after $\chi$ as shown in the flow diagram for 3 rounds.
 		\[
 			B[x][y][z] = A[x][y][z] \oplus (A[x+1][y][z] \oplus 1) \cdot A[x+2][y][z]
 		\] and
