--- a/latex/Thesis/intro.tex
+++ b/latex/Thesis/intro.tex
@@ -6,23 +6,24 @@
 A hash function $H:\{0,1\}^* \rightarrow \{0,1\}^n $ is a deterministic function which compresses an input of arbitrary size to a fixed size output. The cryptographic applications of a hash function further require it to satisfy the following conditions.
 
 \begin{itemize}\setlength\itemindent{20pt}
-    \item Efficient : Given $m$, it is easy to compute $H(m)$.
+    \item Efficiency : Given $m$, it is easy to compute $H(m)$.
     \item Preimage Resistance : Given $H(m)$, it is computationally hard to find $m$.
     \item Second-preimage Resistance : Given $m$, it is computationally hard to find $m^\prime$ such that $H(m)=H(m^\prime)$.
     \item Collision Resistance : It is computationally hard to find $m$ and $m^\prime$ such that $H(m)=H(m^\prime)$.
 \end{itemize}
 
-The hash function having the above properties are referred as cryptographic hash functions. Cryptographic hash functions are an important component of modern cryptography. These are one way functions with a mathematical function which is computationally hard to invert. The input of such a function is generally called a message i.e. $m$ and the output i.e. $H(m)$ is often referred as digest or fingerprint of the message $m$. A hash function is said to be secure if its resilient to preimage, collision and second-preimage attacks.
+The hash function having the above properties are referred as cryptographic hash functions. Cryptographic hash functions are the important component of modern cryptography. The input of such a function is generally called a message i.e. $m$ and the output i.e. $H(m)$ is often referred as digest or fingerprint of the message $m$. The cryptographic hash function are also sometime referred as secure hash function. From now on, even if we refer a hash function, we always mean a cryptographic hash function.
 
 \section{Some Applications of Hash functions}
 
-So a hash function maps data of any size to a data of fixed size. Due to the above listed properties hash functions have found many applications in the field of computer science. A few very basic applications of hash functions are :
+Since a hash function maps data of any size to a data of fixed size and is pre-image and collision resistant, it has found many applications in the field of computer science. A few very basic applications of hash functions are the following:
 \begin{enumerate}
-	\item Creating a digest from the message and then using the digest later to ensure that there are no changes to the message. This property is called message integrity. Hash functions are widely used for the verification of message integrity.
-	\item Hash functions are also used for storing passwords. Secure applications don't actually store the passwords directly in the database but the hash of the password is stored in the database by using a secure hash function for calculating hash. The hash stored in the database is used in future for comparing with the hash of the password entered by the user and then appropriate action is taken on a successful match. In case of a security breach the attacker knows only the hashes stored in the database not the actual passwords. Deriving password (Preimage) from the hash is again a computationally hard problem.
+	\item Computing a digest from a big file and then using the digest later to ensure that there are no changes to the file. For example, in the linux release servers along with the iso files, we often see \SHA256SUM and \SHA1SUM text files. These text files contain the digest of iso files and are meant to check if the file is not altered en route.
+	
+	\item The Hash functions are also used for storing passwords. Secure applications don't actually store the passwords directly in the database but the hash of the password is stored in the database. The hash stored in the database is used in future for comparing with the hash of the password entered by the user and then appropriate action is taken on a successful match. In case of a security breach the attacker does get to know the digests of passwords only, not the actual passwords. Deriving password (Preimage) from the hash is difficult due to the pre-image resistance.
 \end{enumerate}
 
-Hash function is an integral component of cryptography. It is used in many cryptographic applications e.g., Authentication, Non-repudiation, Digital Signatures and Integrity etc.. The main motivation behind designing a hash function is that it should ideally behave like a random oracle. A random oracle is described as a black box, which when receives a new input it generates a uniform and random output and stores this output corresponding to the input, on receiving an old input it just returns the stored output generated previously. So a random oracle is like a hash function such that we know nothing about the output of random oracle for a message $m$, until we use $m$ as input to the oracle and see its output. Therefore, its difficult to really build a random oracle and there is no proof that it exists. Hence the candidates for random oracle are hash functions, though hash functions can be secure to preimage, collision attacks but doesn't mean that they are random oracle. It has been shown using length extension attacks that hash functions like \SHA-256, \SHA-512 are not random oracle but are secure hash functions, as they are able to guess a hash of message without even trying that message. Protocols or modes of hash functions are proven secure in the random oracle model, i.e. when hash function is assumed to be a random oracle.
+Apart from the above very basic applications, the hash functions are frequently used in cryptography. /it has now become an integral component of cryptography. It is used in many cryptographic applications such as Authentication, Non-repudiation, Digital Signatures and Integrity etc.. The main motivation behind designing a hash function is that it should ideally behave like a random oracle. A random oracle is described as a black box, which when receives a new input it generates a uniform and random output and stores this output corresponding to the input, on receiving an old input it just returns the stored output generated previously. So a random oracle is like a hash function such that we know nothing about the output of random oracle for a message $m$, until we use $m$ as input to the oracle and see its output. Therefore, its difficult to really build a random oracle and there is no proof that it exists. Hence the candidates for random oracle are hash functions, though hash functions can be secure to preimage, collision attacks but doesn't mean that they are random oracle. It has been shown using length extension attacks that hash functions like \SHA-256, \SHA-512 are not random oracle but are secure hash functions, as they are able to guess a hash of message without even trying that message. Protocols or modes of hash functions are proven secure in the random oracle model, i.e. when hash function is assumed to be a random oracle.
 
 \section{History of Hash functions}
 
