--- a/latex/Thesis/thesis.tex
+++ b/latex/Thesis/thesis.tex
@@ -112,8 +112,8 @@
 \newtheorem{prop}[theorem]{Proposition}
 \newtheorem{remark}[theorem]{Remark}
 
-\usepackage{minted}
-\usemintedstyle{bw}
+% \usepackage{minted}
+% \usemintedstyle{bw}
 
 \usepackage{fontspec}
 \setmonofont[Scale=0.85]{DejaVu Sans Mono}
