--- a/latex/Thesis/conclusions.tex
+++ b/latex/Thesis/conclusions.tex
@@ -1,7 +1,9 @@
 \chapter{Conclusion}
 
 \section{Conclusion and Future works}
-This thesis proposes a preimage attack on the $2$ rounds of round-reduced \KECCAK-$384$. The attack is not yet practical but it is much better than the existing best-known attack in terms of the time complexity. The basic idea of the attack can be used to mount a practical preimage attack on the $\Keccak[r:=400-192,\, c:=192]$ and $\Keccak[r:=800-384,\,c:=384]$. 
-We have used a similar idea to mount a preimage attack on $3$ rounds of round-reduced \KECCAK-$256$, this attack though not practical is still better than the attack mentioned in~\cite{guo2016linear}.
-Further, in future, we will try to explore a practical attack for the $2$ or more rounds of round-reduced \KECCAK-$384$, \KECCAK-$512$.
+In this thesis we propose few attacks on round-reduced \KECCAK{} to cryptanalyze it. We propose a preimage attack on the $2$ rounds of round-reduced $\Keccak[r:=800-384,\,c:=384]$. This attack is practical and is also better than the existing best-known attack in terms of the time complexity. The basic idea of the attack can also be used to mount a practical preimage attack on $\Keccak[r:=400-192,\, c:=192]$ also.
+ 
+We also propose attacks for 3-round \Keccak{}-$256$ and 4-round \Keccak-$224$, there is no improvement observed in these attacks compared to the methods described in~\cite{guo2016linear} but these methods provide different structure to attack the system with the same complexity.
+From the above attacks we conclude that these attacks are far from affecting the security strength of $24$ rounds of \Keccak{}.
 
+Further, in future, we will try to explore a practical attack for the $2$ or more rounds of round-reduced \KECCAK-$384$, \KECCAK-$512$.
