--- a/latex/Thesis/related.tex
+++ b/latex/Thesis/related.tex
@@ -388,7 +388,7 @@ To prevent the spread of $\theta$ in first round we need to add constraints :
 \end{enumerate}
 where, $\alpha_0, \alpha_2$ are random constants.
 
-Due to the above constraints the state remains linear and the variables does not spread after application of $\theta$ step mapping as shown in the second state of the Figure~\ref{fig:3rkeccak256}. Further applying $\pi \circ \rho$ on the second state, permutes the positions of the lanes as well as rotations within the lane. Following this, $\iota \circ \chi$ step is applied on the third state to obtain the fourth state, which is a linear state. Since $\chi$ is a row-dependent operation and each row in the third state contains atmost $2$ variables which are not adjacent therefore the resultant row after applying $\chi$ doesn't contain any quadratic variables. 
+Due to the above constraints the state remains linear and the variables does not spread after application of $\theta$ step mapping as shown in the second state of the Figure~\ref{fig:3rkeccak256}. Further applying $\pi \circ \rho$ on the second state, permutes the positions of the lanes as well as rotations within the lane. Following this, $\iota \circ \chi$ step is applied on the third state to obtain the fourth state, which is a linear state. As explained in observation~\ref{ob5} since $\chi$ is a row-dependent operation and each row in the third state contains atmost $2$ variables which are not adjacent therefore the resultant row after applying $\chi$ doesn't contain any quadratic variables.
 
 Hence after applying $\iota \circ \chi \circ \pi \circ \rho \circ \theta $ i.e. one round on the initial state, the output state remains linear.
 
@@ -397,7 +397,9 @@ Moving on to the second round, the state is linear even after application of $\p
 % On the other hand, for \KECCAK-$256$ we have $d = 256 = 64*4$ i.e. hash value of only $4$ lanes. To make it easier to invert the $\chi$ step we can assume any random value as value of 5th lane in the hash state. but this will add more conditions to satisfy those assumed 64 bits for the 5-th lane.
 % We can directly apply $\iota^{-1}$ on the given hash and then we obtain $4$ hash lanes. Further, we can apply observation~\ref{ob3} to obtain $4$ linear equations on the bits input to $\chi$ for that row. By this we obtain linear relations for the input state to the $\chi$ step.
 
-Then we can apply the same technique as mentioned in section 6.3 of \cite{guo2016linear} for this structure also. If we observe carefully then, each bit of the inverted hash state is a sum of 11 bits of the output of the second round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just add a constant to the first lane, they do not increase the nonlinear terms, and thus we can ignore these step mappings in the last one and a half rounds. 
+Then we can apply the same technique as mentioned in section 6.3 of \cite{guo2016linear} for this structure also. If we observe carefully then, each bit of the inverted hash state is a sum of 11 bits of the output of the second round. Since $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just add a constant to the first lane, they do not increase the nonlinear terms, and thus we can ignore these step mappings in the last one and a half rounds. For \Keccak-$256$ the hash state comprises of 4 lanes. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we know only 4 out of 5 bits in each row of hash state. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i,b_i$ denotes the input and output bit of $\chi$ respectively. 
+
+Now, we aim to linearize $C[x][y][z]$ by guessing few terms and then matching it with the bit obtained after applying $\chi^{-1}$ as explained above.
 
 The state $C$ in Figure~\ref{fig:3rkeccak256}, can be expressed in terms of state $B$ :
 \[
@@ -420,11 +422,12 @@ Attack complexity $ = 2^{256 - 29} = 2^{227}$.
 
 So the attack complexity for 3-round \KECCAK{}-$256$ is $2^{227}$.
 
+\newpage
 \section{Preimage attack on 4-round \KECCAK-$224$}
     
 In this section we discuss a preimage attack for 4-round \KECCAK{}-$224$ where we try to keep the first 2 rounds linear and then linearize the initial state of the 4th round to be able to match some bits of the hash.
 \begin{figure}[H]
-    \includegraphics[scale=0.72]{4R,Keccak-224.pdf}
+    \includegraphics[scale=0.7]{4R,Keccak-224.pdf}
     \caption{Preimage attack on 4-round \KECCAK-$224$}
     \label{fig:keccak224}
 \end{figure}
@@ -440,9 +443,31 @@ In this section we discuss a preimage attack for 4-round \KECCAK{}-$224$ where w
     \]
 \end{enumerate}
 
-Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ doesn't spread. Moreover the parity of column-$1$ and column-$3$ is $1$ which causes the increase in number of lanes containing all bits as $1$ after $\theta$ as shown in second state of Figure~\ref{fig:keccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in third state. Further on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms this is due to the values of the rows input to $\chi$. With this, the first round is complete and the output state i.e. fourth state is still linear.
+Due to the above constraints, after $\theta$ step the variables in the column $0$ and $2$ doesn't spread. Moreover the parity of column-$1$ and column-$3$ is $1$ which causes the increase in number of lanes containing all bits as $1$ after $\theta$ as shown in second state of Figure~\ref{fig:keccak224}. After applying $\pi \circ \rho$ on the second state, the position of lanes is permuted as shown in third state. Further on applying $\iota \circ \chi$ we obtain the fourth state, we observe that there is no increase in the number of linear terms this is due to the values of the rows input to $\chi$ as explained in observation~\ref{ob5}. With this, the first round is complete and the output state i.e. fourth state is still linear.
 
-We now proceed with the second round, since there are $4$ columns in fourth state with linear terms  of Figure~\ref{fig:keccak224}. These linear variables will spread after the $\theta$ step, to prevent this we constraint the parity of these $4$ columns to be random constants. After applying $\theta$ step we obtain the fifth state where the yellow lanes represent the linear variables and gray lanes represent constants. On application of $\pi \circ \rho$ on the fifth state, the position of all lanes are permuted. Now after applying $\iota \circ \chi$ on the sixth state we observe that almost all the lanes state in the seventh state contain linear terms, this is primarily due to 2 linear terms in few rows in the state input to $\chi$. Due to this the complete row after applying $\chi$ contains linear terms. With this, the second round is complete and the output state i.e. seventh state where all lanes are linear as shown in~\ref{fig:keccak224}.
+We now proceed with the second round, since there are $4$ columns in fourth state with linear terms  of Figure~\ref{fig:keccak224}. These linear variables will spread after the $\theta$ step, to prevent this we constraint the parity of these $4$ columns to be random constants. After applying $\theta$ step we obtain the fifth state where the yellow lanes represent the linear variables and gray lanes represent constants. On application of $\pi \circ \rho$ on the fifth state, the position of all lanes are permuted. Now after applying $\iota \circ \chi$ on the sixth state we observe that almost all the lanes state in the seventh state contain linear terms, this is primarily due to 2 linear terms in few rows in the state input to $\chi$ as explained in observation~\ref{ob5}. Due to this the complete row after applying $\chi$ contains linear terms. With this, the second round is complete and the output state i.e. seventh state where all lanes are linear as shown in~\ref{fig:keccak224}.
 
-Further, we start with the third round. After applying $\theta$ step on the seventh state the state remains linear as $\theta$ is a linear operation. After applying $\pi \circ \rho$ we obtain state $A$ which is linear as $\pi$ and $\rho$ steps are linear step mappings. In state $A$ each row contains linear variables, and since $\chi$ is a non-linear operation so if two adjacent bits are linear in a row then the output state will contain quadratic variables after applying $\chi$. So on applying step $\chi$ to state $A$, we obtain state $B$ 
+Further, we start with the third round. After applying $\theta$ step on the seventh state the state remains linear as $\theta$ is a linear operation. After applying $\pi \circ \rho$ we obtain state $A$ which is linear as $\pi$ and $\rho$ steps are linear step mappings. In state $A$ each row contains linear variables, and since $\chi$ is a non-linear operation so if two adjacent bits are linear in a row then the output state will contain quadratic variables after applying $\chi$. So on applying step $\chi$ to state $A$, we obtain state $B$ where orange lanes represent quadratic variables as shown in ~\ref{fig:keccak224}.
 
+If we carefully observe then the input to step $\chi$ of third round is linear i.e. state $A$ and also that each bit of the input state of $\chi$ step of the fourth round is a sum of 11 bits of the output state of the third round. SInce $\pi \circ \rho$ just permutate the positions of these bits and $\iota$ just adds a constant to the first lane so they don't increase the nonlinear terms. Therefore, we ignore these step mappings in the last one and a half rounds.
+
+For \Keccak{}-$224$ the hash state comprises of 3 lanes and 32 bits in the 4th lane. We can't directly apply $\chi^{-1} \circ \iota^{-1}$ on the hash state since we don't have value of complete row. For this attack we can use observation~\ref{ob4} to set up equations such as $a_0 = b_0$ when $b_1 = 1$~\cite{guo2016linear}. Here $a_i, \; b_i$ denotes the input and output bit of $\chi$ respectively.
+
+The state $C$ in Figure~\ref{fig:keccak224}, can be expressed in terms of state $B$ :
+\[
+C[x][y][z] = B[x][y][z] \oplus \oplus_{y' = 0}^{4} B[x-1][y'][z] \oplus \oplus_{y' = 0}^{4} B[x+1][y'][z-1]
+\]
+
+Open all the expressions and separate two terms $B[x][y][z]$ and $B[x-1][y][z]$ and rest 9 terms remain as it is.
+So, \[ B[x][y][z] \oplus B[x-1][y][z] = (a \oplus c + b) \oplus d
+\]
+Where,
+\[
+a = A[x][y][z], b = A[x + 1][y][z], c = A[x + 2][y][z], d = A[x - 1][y][z]
+\]
+Guessing $b$ and other 9 terms would make $C[x][y][z]$ linear. Hence, We linearize $C[x][y][z]$ by guessing these 10 bits. We obtain 11 = 1 + 10 linear equations and match 1 bit of the hash value corresponding to $C[x][y][z]$. So, if we have $t$ variables in our state, then we can match $t/11$ bits of the hash.
+
+For \Keccak-$224$, we started with $8$ variable lanes in the initial state. After applying conditions to keep $\theta$ as constant in the first and the second round we are left with $8 - 2 - 4 = 2$ variable lane. Hence the number of variables $t = 2*64 = 128$. From these variables we can match atmost $t/11 = 128/11 = 11$ bits. 
+With this we have a complexity gain over brute-force of $2^{11}$.
+
+Attack complexity $ = 2^{224 - 11} = 2^{213}$.
